--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-fastapi==0.115.0
-uvicorn[standard]==0.30.6
-requests==2.32.3
-python-dotenv==1.0.1
+fastapi
+uvicorn[standard]
+httpx
+pydantic
+sqlmodel
+python-dotenv
